# resumex

./: .flake8  .gitignore  README.md  pyproject.toml
src/resumex/: __main__.py
src/resumex/config/: constants.py
src/resumex/core/di/: provider.py
src/resumex/templates/: default.tex
