[project]
name = "resumex"
version = "0.1.0"
description = "Make your resume from LaTeX templates"
license = {text = "MIT"}
authors = [
    {name = "Valentin Lafage",email = "vlafage.dev@free.fr"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "resume", "cv", "python", "latex" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "platformdirs (>=4.3.7,<5.0.0)"
]

[project.urls]
repository = "https://github.com/valbernix/resumex"
"Bug Tracker" = "https://github.com/valbernix/resumex/issues"

[tool.poetry.plugins."console_scripts"]
resumex = "resumex.__main__:main"

[tool.poetry]
packages = [{include = "resumex", from = "src"}]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.black]
target-version = ['py39']
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
